Fix small robot alignment in modal for issue 1758

--- a/assets/styles/less/base.less
+++ b/assets/styles/less/base.less
@@ -1331,8 +1331,8 @@ body {
 
             &.robot-sm {
                 img {
-                    left: 35vw;
-                    margin-top: 12vh;
+                    left: 39vw; //35vw
+                    margin-top: 10vh; //12vh
                     width: auto;
                 }
             }
